BSMaterial added and cdb material data, first cut